🗄️ Добавлена полноценная система бэкапов - автоматические бэкапы по расписанию, три типа бэкапов (данные/полный/конфигурация), простое восстановление с подтверждением, автоматическая очистка старых бэкапов, удобная команда penalty-backup для управления

--- a/env.example
+++ b/env.example
@@ -1,8 +1,32 @@
-# Telegram Bot Configuration
-BOT_TOKEN=your_bot_token_here
+# Основные настройки бота
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+ADMIN_USER_IDS=123456789,987654321
+
+# База данных
+DATABASE_URL=sqlite:///data/penalty_bot.db
+
+# Логирование
+LOG_LEVEL=INFO
+LOG_FILE=logs/penalty_bot.log
+
+# Google Sheets (опционально)
+GOOGLE_SHEETS_ENABLED=false
+GOOGLE_CREDENTIALS_FILE=data/service_account.json
+SPREADSHEET_ID=your_spreadsheet_id_here
+
+# Канал для проверки подписки (опционально)
+CHANNEL_ID=@your_channel
+CHANNEL_CHECK_ENABLED=false
+
+# Настройки производительности
+MAX_WORKERS=4
+REQUEST_TIMEOUT=30
+
+# Настройки безопасности
+RATE_LIMIT_ENABLED=true
+MAX_REQUESTS_PER_MINUTE=10
 
 # Google Sheets Configuration
-SPREADSHEET_ID=your_google_spreadsheet_id_here
 SHEET_NAME=Лист1
 
 # Optional: Database configuration (SQLite by default)
